# xdagj

./: .gitignore  LICENSE  README.md  pom.xml
docs/: Build test environment.md  Build_Test_Environment.md  New_Address_Structure.md  README_zh.md  Win10_Configuration_RandomX_Algorithm_Environment_en.md  Win10_Configuration_RandomX_Algorithm_Environment_eng.md  Win10_Configuration_RandomX_Algorithm_Environment_zh.md  Win10_RandomX.md  XDAGJ_A_new_DAG_based_cryptocurrency_en.md  XDAGJ_A_new_DAG_based_cryptocurrency_zh.md  XDAGJ_Cli_Wallet_en.md  XDAGJ_Command.md  (+30 more)
src/c/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  crc.c  dfs_jni.cc  dfslib_crypt.c  dfslib_crypt.h  dfslib_random.c  dfslib_random.h  dfslib_types.h  dnet_crypt.c  jni.h  jni_md.h  libdfs.dylib  make_lib.sh  make_so.bat  make_so.sh
src/c/cmake/: toolchain-Darwin-x86_64.cmake  toolchain-Linux-aarch64.cmake  toolchain-Linux-x86_64.cmake  toolchain-Windows-x86_64.cmake
src/c/dfs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  crc.c  crc.h  dfs_jni.cc  dfslib_random.c  dfslib_string.c  dfslib_string.h  dfsrsa.c  dfsrsa.h  dnet_crypt.c  dnet_crypt.h  libdfs.dylib  make_so.sh
src/c/randomx/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  make_so.sh
src/c/randomx/src/: c_threads.h  jit_compiler.hpp  jit_compiler_a64.cpp  jit_compiler_a64_static.S  jit_compiler_x86.cpp  jit_compiler_x86_static.S  jit_compiler_x86_static.asm  randomx_jni.cpp  virtual_memory.cpp
src/c/randomx/src/asm/: program_read_dataset.inc  program_read_dataset_sshash_init.inc
(+1434 files in other folders)
